5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1595_2049.log
== TEST (2019-03-26 17:11:47) 
-- CODE:
x=float(input("dividendo"))
y=float(input("divisor"))
quociente=(x/y)
resto=(x%y)
print(quociente)
print(resto)
-- OUTPUT:
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:54) 
-- CODE:
x=float(input("dividendo"))
y=float(input("divisor"))
quociente=(x/y)
resto=(x%y)
print(quociente)
print(resto)
-- OUTPUT:
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:04) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x/y)
resto=(x%y)
print(quociente)
print(resto)
-- OUTPUT:
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:12:13) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x/y)
resto=(x%y)
print(quociente)
print(resto)
-- EXECUTION TIME:
0.148236
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.6
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.5
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:18) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x/y)
resto=(x%y)
print(quociente)
print(resto)
-- OUTPUT:
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:31) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)
-- OUTPUT:
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:12:39) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)
-- EXECUTION TIME:
0.174802
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:36) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)
-- OUTPUT:
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:14:08) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(int(quociente))
print(int(resto))
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:14:16) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(int(quociente))
print(int(resto))
-- EXECUTION TIME:
0.210192
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:14:33) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x/y)
resto=(x%y)
print(int(quociente))
print(int(resto))
-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:14:39) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x/y)
resto=(x%y)
print(int(quociente))
print(int(resto))
-- EXECUTION TIME:
0.132111
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:27:06) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x/y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print((resto))
-- OUTPUT:
8.0
5.0
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:27:15) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x/y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print((resto))
-- EXECUTION TIME:
0.191242
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.6
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.5
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:27:54) 
-- CODE:
x=float(input("dois numeros:"))

-- OUTPUT:
8.0
5.0
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:30:01) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
w=(x//y)
z=(x%y)
print(w)
print(z)


-- OUTPUT:
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:30:08) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
w=(x//y)
z=(x%y)
print(w)
print(z)


-- EXECUTION TIME:
0.128993
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:30:11) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
w=(x//y)
z=(x%y)
print(w)
print(z)


-- OUTPUT:
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:30:44) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
w=(x//y)
z=(x%y)
print(x)
print(y)
print(w)
print(z)


-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:30:50) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
w=(x//y)
z=(x%y)
print(x)
print(y)
print(w)
print(z)


-- EXECUTION TIME:
0.193971
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:31:00) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
w=(x//y)
z=(x%y)



-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:31:38) 
-- CODE:
x=float(input("dividendo:;divisor:"))




-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:31:49) 
-- CODE:
x=float(input("dividendo:"))




-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:50:41) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print(resto)



-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:50:54) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print(resto)



-- EXECUTION TIME:
0.157715
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:50:59) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- OUTPUT:
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:51:05) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- OUTPUT:
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:51:11) 
-- CODE:
x=float(input("dividendo:"))
y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- EXECUTION TIME:
0.149255
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:52:10) 
-- CODE:
z=float(input("dois numeros"))
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- OUTPUT:
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:52:32) 
-- CODE:
z=float(input("dois numeros"))
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- OUTPUT:
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:52:33) 
-- CODE:
z=float(input("dois numeros"))
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- EXECUTION TIME:
0.134402
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
dois numeros173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
dois numeros173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
dois numeros173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:52:37) 
-- CODE:
z=float(input("dois numeros"))
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- EXECUTION TIME:
0.201926
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:54:27) 
-- CODE:
z=float(input("dois numeros:"))
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- OUTPUT:
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:54:48) 
-- CODE:
z=float(input("dois numeros:"))
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- OUTPUT:
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:16:13) 
-- CODE:
z=float(input("dois numeros:"))
y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    quociente=(x//y)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:17:10) 
-- CODE:
x=float(input("dois numeros:"))

y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- OUTPUT:
4.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:18:06) 
-- CODE:
x=float(input("dividendo:"))

y=float(input("divisor:"))
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- OUTPUT:
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:19:19) 
-- CODE:
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- OUTPUT:
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:19:22) 
-- CODE:
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(quociente)
print(resto)



-- EXECUTION TIME:
0.183565
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:27:32) 
-- CODE:
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print(resto)



-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:35) 
-- CODE:
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print(resto)



-- EXECUTION TIME:
0.143238
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346
2
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346
2
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346
2
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:27:38) 
-- CODE:
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print(resto)



-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:27:46) 
-- CODE:
x=346
y=2
quociente=(x//y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print(resto)



-- EXECUTION TIME:
0.176055
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
346
2
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
346
2
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
346
2
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:29:04) 
-- CODE:
x=float(input("Dividendo:"))
y=float(input("Divisor:"))
quociente=(x//y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print(resto)



-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:29:15) 
-- CODE:
x=float(input("Dividendo:"))
y=float(input("Divisor:"))
quociente=(x//y)
resto=(x%y)
print(x)
print(y)
print(quociente)
print(resto)



-- EXECUTION TIME:
0.247811
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:11:31) 
-- CODE:
num1=int(input("Dividendo:"))
num2=int(input("Divisor:"))
quociente=(num1//num2)
resto=(num1%num2)
print(quociente)
print(resto)





-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:11:34) 
-- CODE:
num1=int(input("Dividendo:"))
num2=int(input("Divisor:"))
quociente=(num1//num2)
resto=(num1%num2)
print(quociente)
print(resto)





-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:11:49) 
-- CODE:
num1=int(input("Dividendo:"))
num2=int(input("Divisor:"))
quociente=(num1//num2)
resto=(num1%num2)
print(quociente)
print(resto)





-- EXECUTION TIME:
0.183404
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:21:28) 
-- CODE:
var=int(input("Dividendo:";"Divisor"))
quociente=(num1//num2)
resto=(num1%num2)
print(quociente)
print(resto)





-- ERROR:
File "XXXX", line 1
    var=int(input("Dividendo:";"Divisor"))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:21:45) 
-- CODE:
var=int(input("Dividendo:","Divisor"))
quociente=(num1//num2)
resto=(num1%num2)
print(quociente)
print(resto)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var=int(input("Dividendo:","Divisor"))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:21:56) 
-- CODE:
var=int(input("Dividendo:")
quociente=(num1//num2)
resto=(num1%num2)
print(quociente)
print(resto)





-- ERROR:
File "XXXX", line 2
    quociente=(num1//num2)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:22:03) 
-- CODE:
var=int(input("Dividendo:")0
quociente=(num1//num2)
resto=(num1%num2)
print(quociente)
print(resto)





-- ERROR:
File "XXXX", line 1
    var=int(input()0
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:22:09) 
-- CODE:
var=int(input("Dividendo:"))
quociente=(num1//num2)
resto=(num1%num2)
print(quociente)
print(resto)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quociente=(num1//num2)
NameError: name 'num1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:24:30) 
-- CODE:
var=int(input("Dividendo:"))
var2=int(input("Divisor:"))
x=(var//var2)
y=(var%var2)
print(x)
print(y)





-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:24:37) 
-- CODE:
var=int(input("Dividendo:"))
var2=int(input("Divisor:"))
x=(var//var2)
y=(var%var2)
print(x)
print(y)





-- EXECUTION TIME:
0.178005
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:24:52) 
-- CODE:
var=int(input("Dividendo:"))
var2=int(input("Divisor:"))
x=(var//var2)
y=(var%var2)
print(x)
print(y)





-- OUTPUT:
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:26:01) 
-- CODE:
var=(346)
var2=(2)
x=(var//var2)
y=(var%var2)
print(x)
print(y)





-- OUTPUT:
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:26:09) 
-- CODE:
var=(346)
var2=(2)
x=(var//var2)
y=(var%var2)
print(x)
print(y)





-- EXECUTION TIME:
0.16859
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
173
0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
173
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
173
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:27:34) 
-- CODE:
var=int(input("Dividendo:"))
var2=int(input("Divisor:"))
x=(var//var2)
y=(var%var2)
print(var)
print(var2)
print(x)
print(y)





-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:27:41) 
-- CODE:
var=int(input("Dividendo:"))
var2=int(input("Divisor:"))
x=(var//var2)
y=(var%var2)
print(var)
print(var2)
print(x)
print(y)





-- EXECUTION TIME:
0.207484
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
